[gd_scene load_steps=9 format=3 uid="uid://1s4asqpay67m"]

[ext_resource type="Script" path="res://player/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b4tnsxv70xmon" path="res://textures/texture_sheet.png" id="2"]
[ext_resource type="Material" uid="uid://dyai1tpr3e0pn" path="res://textures/new_orm_material_3d.tres" id="3_yjovy"]
[ext_resource type="ArrayMesh" path="res://meshes/outline_mesh.tres" id="4_p171e"]

[sub_resource type="CylinderShape3D" id="1"]
height = 1.75
radius = 0.375

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_jyixh"]
auto_exposure_enabled = true
auto_exposure_scale = 0.2
auto_exposure_speed = 0.3
auto_exposure_min_sensitivity = 30.0
auto_exposure_max_sensitivity = 100.0

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="BoxShape3D" id="BoxShape3D_no3fp"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1")
is_serialisatable = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("1")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
attributes = SubResource("CameraAttributesPractical_jyixh")
fov = 74.0
near = 0.02
far = 1000.0

[node name="RayCast3D" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -4)
collision_mask = 2

[node name="SelectedBlock" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -127.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("2")
expand_mode = 1

[node name="BlockToPlaseArea" type="Area3D" parent="."]
transform = Transform3D(0.998, 0, 0, 0, 0.998, 0, 0, 0, 0.998, 0, 0, 0)
top_level = true
monitorable = false

[node name="OutlineMeshInstance3D" type="MeshInstance3D" parent="BlockToPlaseArea"]
visible = false
mesh = ExtResource("4_p171e")
surface_material_override/0 = ExtResource("3_yjovy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlockToPlaseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.501, 0.501, 0.501)
shape = SubResource("BoxShape3D_no3fp")

[node name="BlockToRemoveArea" type="Area3D" parent="."]
transform = Transform3D(1.02, 0, 0, 0, 1.02, 0, 0, 0, 1.02, 0, 0, 0)
top_level = true
visible = false
monitorable = false

[node name="OutlineMeshInstance3D" type="MeshInstance3D" parent="BlockToRemoveArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, -0.01, -0.01)
mesh = ExtResource("4_p171e")
surface_material_override/0 = ExtResource("3_yjovy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlockToRemoveArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.492, 0.49, 0.49)
shape = SubResource("BoxShape3D_no3fp")
